syntax = "proto2";

package info.anodsplace.headunit.aap.protocol.proto;
option java_outer_classname = "Input";

import "common.proto";

enum InputMsgType
{
    EVENT = 0x8001;
    BINDINGREQUEST = 0x8002;
    BINDINGRESPONSE = 0x8003;
}

message Key
{
    optional uint32 keycode = 1;
    optional bool down = 2;
    optional uint32 metastate = 3;
    optional bool longpress = 4;
}

message KeyEvent
{
    repeated Key keys = 1;
}

message TouchEvent
{
    enum PointerAction
    {
        TOUCH_ACTION_DOWN = 0;
        TOUCH_ACTION_UP = 1;
        TOUCH_ACTION_MOVE = 2;
        TOUCH_ACTION_CANCEL = 3;
        TOUCH_ACTION_OUTSIDE = 4;
        TOUCH_ACTION_POINTER_DOWN = 5;
        TOUCH_ACTION_POINTER_UP = 6;
    }

    message Pointer
    {
        optional uint32 x = 1;
        optional uint32 y = 2;
        optional uint32 pointer_id = 3;
    }
    repeated Pointer pointer_data = 1;
    optional uint32 action_index = 2;
    optional PointerAction action = 3;
}

message RelativeEvent_Rel
{
    optional uint32 keycode = 1;
    optional int32 delta = 2;
}

message RelativeEvent
{
    repeated RelativeEvent_Rel data = 1;
}

message AbsoluteEvent_Abs
{
    optional uint32 keycode = 1;
    optional int32 value = 2;
}

message AbsoluteEvent
{
    repeated AbsoluteEvent_Abs data = 1;
}

message InputReport
{
    optional uint64 timestamp = 1;
    optional int32 disp_channel_id = 2;
    optional TouchEvent touch_event = 3;
    optional KeyEvent key_event = 4;
    optional AbsoluteEvent absolute_event = 5;
    optional RelativeEvent relative_event = 6;
    optional TouchEvent touchpad_event = 7;
}

message KeyBindingRequest
{
    repeated int32 keycodes = 1;
}

message BindingResponse
{
    optional MessageStatus status = 1;
}