syntax = "proto2";

package info.anodsplace.headunit.aap.protocol.proto;
option java_outer_classname = "Media";

enum MediaMsgType
{
    MEDIA_DATA = 0x0000;
    CODEC_CONFIG = 0x0001;
    SETUPREQUEST = 0x8000;
    STARTREQUEST = 0x8001;
    STOPREQUEST = 0x8002;
    CONFIGRESPONSE = 0x8003;
    ACK = 0x8004;
    MICREQUEST = 0x8005;
    MICRESPONSE = 0x8006;
    VIDEOFOCUSREQUESTNOTIFICATION = 0x8007;
    VIDEOFOCUSNOTIFICATION = 0x8008;
    UPDATE_UI_CONFIG_REQUEST = 0x8009;
    UPDATE_UI_CONFIG_REPLY = 0x800a;
    AUDIO_UNDERFLOW_NOTIFICATION = 0x800b;
}

enum MediaCodecType
{
    AUDIO = 1;
    VIDEO = 3;
}

enum AudioStreamType
{
    AUDIO_STREAM_NONE = 0;
    AUDIO_STREAM_SPEECH = 1;
    AUDIO_STREAM_SYSTEM = 2;
    AUDIO_STREAM_MEDIA = 3;
    AUDIO_STREAM_ALARM = 4;
}

message AudioConfiguration
{
    optional uint32 sample_rate = 1;
    optional uint32 number_of_bits = 2;
    optional uint32 number_of_channels = 3;
}

message Start
{
    optional int32 session_id = 1;
    optional uint32 configuration_index = 2;
}

message Ack
{
    optional int32 session_id = 1;
    optional uint32 ack = 2;
}

message MicrophoneRequest
{
    optional bool open = 1;
    optional bool anc_enabled = 2;
    optional bool ec_enabled = 3;
    optional int32 max_unacked = 4;
}

message MicrophoneResponse
{
    optional int32 status = 1;
    optional uint32 session_id = 2;
}

enum VideoFocusMode
{
    VIDEO_FOCUS_PROJECTED = 1;
    VIDEO_FOCUS_NATIVE = 2;
    VIDEO_FOCUS_NATIVE_TRANSIENT = 3;
    VIDEO_FOCUS_PROJECTED_NO_INPUT_FOCUS = 4;
}

enum VideoFocusReason
{
    VIDEO_FOCUS_REASON_UNKNOWN = 0;
    PHONE_SCREEN_OFF = 1;
    LAUNCH_NATIVE = 2;
}

message VideoFocusRequestNotification
{
    optional int32 disp_channel_id = 1 [deprecated = true];
    optional VideoFocusMode mode = 2;
    optional VideoFocusReason reason = 3;
}

message VideoFocusNotification
{
    optional VideoFocusMode mode = 1;
    optional bool unsolicited = 2;
}

message MediaSetupRequest
{
    optional uint32 type = 1;
}

message Config
{
    enum ConfigStatus
    {
        DEVICE = 1;
        HEADUNIT = 2;
    }
    optional ConfigStatus status = 1;
    optional uint32 max_unacked = 2;
    repeated uint32 configuration_indices = 3;
}
